fixed navbar margin on mobile

--- a/client/src/format/ManageIngredients.css
+++ b/client/src/format/ManageIngredients.css
@@ -1,8 +1,8 @@
 .manage-ingredients-title {
     display: flex;
-    margin-bottom: 5px;
+    padding-bottom: 20px;
+    margin-top: 0px;
     justify-content: center;
-    font-family: Roboto;
     font-weight: 300;
 }
 
@@ -17,7 +17,7 @@
 @media screen and (max-width: 600px) {
     .manage-ingredients-title {
         display: flex;
-        margin-top: 60px;
+        margin-top: 10px;
         margin-bottom: 5px;
         justify-content: center;
         font-family: Roboto;
