--- a/client/src/format/Navbar.css
+++ b/client/src/format/Navbar.css
@@ -31,9 +31,9 @@ nav > div {
     nav {
         width: 100%;
         background-color: #1D1E1F;
-        position: fixed;
         top: 0px;
         left: 0px;
+        margin-bottom: 0px;
     }
 }
 
